suporte codigo html

--- a/clientes-frontend/src/app/app.component.html
+++ b/clientes-frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
             <div class="container-fluid"><!--éuma classe bootStrap-->
                 <!--conteudo do sistema, pages de navegação-->
                 
-                <!--indica nesse ponto vai ficar minhas rotas, rota home ja está feita-->>
+                <!--indica nesse ponto vai ficar minhas rotas, rota home ja está feita-->
                 <router-outlet></router-outlet><!--esse component so chama as rotas pelo fato de termos imports RouterModule está no arquivo app-routing-modules.ts-->
             </div>
             <app-rodape></app-rodape> <!--Rodapé-->
@@ -15,6 +15,3 @@
         </main>
     </div>
 </div>
-
-
-
